fixed homepage menu z-index issue

--- a/themes/achp/css/style.css
+++ b/themes/achp/css/style.css
@@ -576,13 +576,13 @@ $arrow-padding: 5px;*/
   font-size: 0.875rem;
   position: relative;
   border-bottom: #043B62;
-  z-index: 900;
+  z-index: 90;
   height: 72px;
   width: 1024px; }
   #header_menu ul {
     margin: 0 auto;
     padding-left: 0;
-    z-index: 901; }
+    z-index: 91; }
   #header_menu ul[data-menu-level="0"] {
     margin: 0 auto;
     height: 72px;
@@ -654,7 +654,7 @@ $arrow-padding: 5px;*/
       #subheader_widescreen #subheader_widescreen_submenu_region #subheader_widescreen_submenu ul {
         padding: 5px 25px 20px 25px;
         position: relative;
-        z-index: 600; }
+        z-index: 89; }
         #subheader_widescreen #subheader_widescreen_submenu_region #subheader_widescreen_submenu ul li {
           list-style-type: none; }
           #subheader_widescreen #subheader_widescreen_submenu_region #subheader_widescreen_submenu ul li a {
@@ -2473,7 +2473,7 @@ $arrow-padding: 5px;*/
         float: left;
         display: block;
         margin-right: 0%;
-        width: 75.0%;
+        width: 75%;
         background-color: #fff;
         border-bottom: 35px solid transparent;
         float: right;
@@ -3455,3 +3455,5 @@ button, #news_landing_page #content .news-landing-container .views-exposed-form 
 /* Admin menu overlay */
 body.toolbar-tray-open.toolbar-vertical.toolbar-fixed {
   margin: 0px; }
+
+/*# sourceMappingURL=style.css.map */
