--- a/themes/achp/sass/features/_header_menu.scss
+++ b/themes/achp/sass/features/_header_menu.scss
@@ -9,14 +9,14 @@
   font-size: 0.875rem;
   position: relative;
   border-bottom: $color-darkblue;
-  z-index: 900;
+  z-index: 90;
   height: $header-menu-height;
   width: 1024px;
 
   ul {
     margin: 0 auto;
     padding-left: 0;
-    z-index: 901;
+    z-index: 91;
   }
 
   ul[data-menu-level="0"] {
@@ -94,7 +94,7 @@
       ul {
         padding: 5px 25px 20px 25px;
         position: relative;
-        z-index: 600;
+        z-index: 89;
 
         li {
           list-style-type: none;
